--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -12,35 +12,30 @@
   z-index: 6
 
 #modal_window
-  +round
+  border-radius: 0px !important
   +box-shadow(rgba(#000, 0.5) 0 5px 20px 0)
   background: #f1f1f1
-  //background: #bfbec1 image-url("modal_window.png")
-  border: 1px solid #1e1e20
   overflow: hidden
-  text-shadow: rgba(#fff, 0.7) 0 1px 0
-  height: 800px
   width: 100% !important
   position: absolute
   top: -46px
   left: 0px
   z-index: 100000
 
-
   header
     box-shadow: none
-    border-radius: 0px !important
+    border-radius: inherit
     -webkit-font-smoothing: subpixel-antialiased
     background: #111 image-url("modal_header.png") repeat-x left bottom
     color: #fff
     overflow: visible
     padding: 0 !important
     position: relative
-    text-shadow: none
-    line-height: 50px
     height: 50px
+    line-height: 50px
+
     z-index: 1
-    border: 0px
+    border: none
 
     #modal_logo
       background: image-url("yv_logo.png") no-repeat 0 14px
