--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -1,5 +1,14 @@
 - verse = modal_verse
 
+:javascript
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=105030176203924";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
 #modal_single_verse.modal{itemscope: true, itemtype: 'http://schema.org/Article'}
   #modal_overlay.overlay &nbsp;
   #modal_window.window
@@ -26,13 +35,13 @@
           = t("read reference", reference: reference.human)
 
     %aside
-      %div{style: "height: 36px;"}
+      %div
         %a{href: "http://twitter.com/share", class: "twitter-share-button", "data-url" => verse.short_link, "data-counturl" => request.url, "data-text" => verse.content[0].chomp, via: "YouVersion", "data-count" => "horizontal", "data-related" => "youversion"} Tweet
-        %script{type: "text/javascript", src: "http://platform.twitter.com/widgets.js"}
-      %div{style: "height: 40px;"}
-        %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"} Share
-        %script{src: "http://static.ak.fbcdn.net/connect.php/js/FB.Share", type: "text/javascript"}
-      %div{style: "height: 40px;"}
+        %script{type: "text/javascript", src: "https://platform.twitter.com/widgets.js"}
+
+      %div.fb-like{"data-href" => "#{request.protocol}#{request.host_with_port}#{request.fullpath}", "data-send" => "false", "data-layout" => "button_count", "data-width" => "450", "data-show-faces" => "false"}
+
+      %div
         %g:plusone{size: "medium"}
         :javascript
           var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
